--- a/test.ipynb
+++ b/test.ipynb
@@ -8,53 +8,720 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "model_weight = [0.9098, 0.9113, 0.9111]"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('xxx.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def mean(weight):\n",
-    "    weight = np.array(weight)\n",
-    "    weight = weight / sum(weight)\n",
-    "    return weight"
+    "df = df[['question', 'result', 'next_word', 'next_two_word']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>question</th>\n",
+       "      <th>result</th>\n",
+       "      <th>next_word</th>\n",
+       "      <th>next_two_word</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9722</th>\n",
+       "      <td>不过，在美国国会中诸如钱布利斯等反对停产F-22战机及其部件的议员大有人在，他们认为由多少架...</td>\n",
+       "      <td>187</td>\n",
+       "      <td>架飞机</td>\n",
+       "      <td>组成</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([0.33299173, 0.33354074, 0.33346754])"
+       "                                               question result next_word  \\\n",
+       "9722  不过，在美国国会中诸如钱布利斯等反对停产F-22战机及其部件的议员大有人在，他们认为由多少架...    187       架飞机   \n",
+       "\n",
+       "     next_two_word  \n",
+       "9722            组成  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mean(model_weight)"
+    "df.sample()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "next_word = df['next_word'].values.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{' ',\n",
+       " '\"',\n",
+       " '(',\n",
+       " ')',\n",
+       " ',',\n",
+       " '-',\n",
+       " '.',\n",
+       " ':',\n",
+       " '°',\n",
+       " '”',\n",
+       " '、',\n",
+       " '。',\n",
+       " '一直',\n",
+       " '万',\n",
+       " '万人次',\n",
+       " '万亿',\n",
+       " '万亿日元',\n",
+       " '万亿美元',\n",
+       " '万亿韩元',\n",
+       " '万份',\n",
+       " '万余',\n",
+       " '万余名',\n",
+       " '万元',\n",
+       " '万公里',\n",
+       " '万千克',\n",
+       " '万千瓦',\n",
+       " '万千米',\n",
+       " '万台',\n",
+       " '万名',\n",
+       " '万吨',\n",
+       " '万吨级',\n",
+       " '万多',\n",
+       " '万多千米',\n",
+       " '万多名',\n",
+       " '万多枚',\n",
+       " '万多辆',\n",
+       " '万封',\n",
+       " '万左右',\n",
+       " '万平方公里',\n",
+       " '万平方米',\n",
+       " '万枚',\n",
+       " '万枝',\n",
+       " '万架',\n",
+       " '万桶',\n",
+       " '万次',\n",
+       " '万海里',\n",
+       " '万磅',\n",
+       " '万米',\n",
+       " '万美元',\n",
+       " '万英尺',\n",
+       " '万英镑',\n",
+       " '万行',\n",
+       " '万辆',\n",
+       " '万韩元',\n",
+       " '三发',\n",
+       " '三款',\n",
+       " '上',\n",
+       " '上海',\n",
+       " '下',\n",
+       " '不',\n",
+       " '不仅',\n",
+       " '不会',\n",
+       " '专机',\n",
+       " '世纪',\n",
+       " '两',\n",
+       " '两栖',\n",
+       " '两种',\n",
+       " '个',\n",
+       " '个人',\n",
+       " '个子',\n",
+       " '中',\n",
+       " '中央',\n",
+       " '中航',\n",
+       " '中队',\n",
+       " '为',\n",
+       " '主要',\n",
+       " '之后',\n",
+       " '之间',\n",
+       " '也',\n",
+       " '事件',\n",
+       " '于',\n",
+       " '交互',\n",
+       " '亮相',\n",
+       " '人',\n",
+       " '人为',\n",
+       " '人均',\n",
+       " '人次',\n",
+       " '人生',\n",
+       " '亿',\n",
+       " '亿个',\n",
+       " '亿元',\n",
+       " '亿公斤',\n",
+       " '亿台',\n",
+       " '亿吨公里',\n",
+       " '亿日元',\n",
+       " '亿次',\n",
+       " '亿澳元',\n",
+       " '亿美金',\n",
+       " '亿英镑',\n",
+       " '亿韩元',\n",
+       " '仅',\n",
+       " '从',\n",
+       " '代',\n",
+       " '以来',\n",
+       " '件',\n",
+       " '任',\n",
+       " '份',\n",
+       " '份文件',\n",
+       " '伤',\n",
+       " '位',\n",
+       " '体积',\n",
+       " '余',\n",
+       " '余个',\n",
+       " '余名',\n",
+       " '余吨',\n",
+       " '余年',\n",
+       " '余枚',\n",
+       " '余架',\n",
+       " '余次',\n",
+       " '余米',\n",
+       " '余艘',\n",
+       " '余项',\n",
+       " '作为',\n",
+       " '作战',\n",
+       " '使',\n",
+       " '使用',\n",
+       " '例',\n",
+       " '侦察机',\n",
+       " '保护',\n",
+       " '倍',\n",
+       " '停产',\n",
+       " '像素',\n",
+       " '元',\n",
+       " '兆',\n",
+       " '兆比特',\n",
+       " '兆瓦',\n",
+       " '兆赫',\n",
+       " '克',\n",
+       " '克拉',\n",
+       " '全球',\n",
+       " '全面',\n",
+       " '公分',\n",
+       " '公开',\n",
+       " '公斤',\n",
+       " '公里',\n",
+       " '公顷',\n",
+       " '兵力',\n",
+       " '具',\n",
+       " '具备',\n",
+       " '具有',\n",
+       " '冒雨',\n",
+       " '军',\n",
+       " '军人',\n",
+       " '凯旋',\n",
+       " '出口型',\n",
+       " '击落',\n",
+       " '分',\n",
+       " '分贝',\n",
+       " '分钟',\n",
+       " '列',\n",
+       " '则',\n",
+       " '到',\n",
+       " '到底',\n",
+       " '前往',\n",
+       " '加',\n",
+       " '加入',\n",
+       " '加油机',\n",
+       " '包',\n",
+       " '医院',\n",
+       " '千万',\n",
+       " '千万美元',\n",
+       " '千克',\n",
+       " '千瓦',\n",
+       " '千米',\n",
+       " '升空',\n",
+       " '单元',\n",
+       " '厘米',\n",
+       " '又',\n",
+       " '反舰导弹',\n",
+       " '发',\n",
+       " '取得',\n",
+       " '口径',\n",
+       " '只',\n",
+       " '可',\n",
+       " '可以',\n",
+       " '可能',\n",
+       " '台',\n",
+       " '台基',\n",
+       " '号',\n",
+       " '同时',\n",
+       " '名',\n",
+       " '名为',\n",
+       " '名演员',\n",
+       " '吨',\n",
+       " '吨级',\n",
+       " '吨重',\n",
+       " '周',\n",
+       " '周岁',\n",
+       " '周年',\n",
+       " '周年纪念',\n",
+       " '和',\n",
+       " '响',\n",
+       " '喷洒',\n",
+       " '因此',\n",
+       " '固定翼',\n",
+       " '国',\n",
+       " '国家',\n",
+       " '国海军',\n",
+       " '圈',\n",
+       " '在',\n",
+       " '在内',\n",
+       " '地空导弹',\n",
+       " '场',\n",
+       " '块',\n",
+       " '坦克',\n",
+       " '坪',\n",
+       " '垂直',\n",
+       " '型',\n",
+       " '基本',\n",
+       " '基础',\n",
+       " '填补',\n",
+       " '增',\n",
+       " '士兵',\n",
+       " '处',\n",
+       " '外',\n",
+       " '外交部',\n",
+       " '外场',\n",
+       " '多',\n",
+       " '多万',\n",
+       " '多万人次',\n",
+       " '多万名',\n",
+       " '多万美元',\n",
+       " '多个',\n",
+       " '多倍',\n",
+       " '多公里',\n",
+       " '多功能',\n",
+       " '多名',\n",
+       " '多吨',\n",
+       " '多场',\n",
+       " '多套',\n",
+       " '多家',\n",
+       " '多岁',\n",
+       " '多平方米',\n",
+       " '多年',\n",
+       " '多枚',\n",
+       " '多架',\n",
+       " '多次',\n",
+       " '多艘',\n",
+       " '多部',\n",
+       " '多项',\n",
+       " '大',\n",
+       " '大规模',\n",
+       " '大项',\n",
+       " '天',\n",
+       " '天海',\n",
+       " '央视春晚',\n",
+       " '失',\n",
+       " '头',\n",
+       " '套',\n",
+       " '套用',\n",
+       " '威胁',\n",
+       " '字',\n",
+       " '安培',\n",
+       " '完成',\n",
+       " '定型',\n",
+       " '客机',\n",
+       " '宣告',\n",
+       " '宪兵营',\n",
+       " '家',\n",
+       " '密码',\n",
+       " '对',\n",
+       " '导弹',\n",
+       " '将',\n",
+       " '将来',\n",
+       " '小时',\n",
+       " '尚未',\n",
+       " '就',\n",
+       " '就是',\n",
+       " '层',\n",
+       " '层楼',\n",
+       " '居民',\n",
+       " '届',\n",
+       " '展示',\n",
+       " '属',\n",
+       " '岁',\n",
+       " '州',\n",
+       " '左右',\n",
+       " '已',\n",
+       " '已经',\n",
+       " '师',\n",
+       " '席',\n",
+       " '幅',\n",
+       " '平方公里',\n",
+       " '平方海里',\n",
+       " '平方米',\n",
+       " '平方英尺',\n",
+       " '平方英里',\n",
+       " '平昌',\n",
+       " '平米',\n",
+       " '年',\n",
+       " '年代',\n",
+       " '年内',\n",
+       " '年初',\n",
+       " '年前',\n",
+       " '年底',\n",
+       " '年度',\n",
+       " '年度预算',\n",
+       " '年期',\n",
+       " '年末',\n",
+       " '年间',\n",
+       " '并',\n",
+       " '并称',\n",
+       " '度',\n",
+       " '座',\n",
+       " '开始',\n",
+       " '张',\n",
+       " '强',\n",
+       " '当天',\n",
+       " '形成',\n",
+       " '彰显',\n",
+       " '很',\n",
+       " '微米',\n",
+       " '性能',\n",
+       " '总师',\n",
+       " '恐怖分子',\n",
+       " '成',\n",
+       " '成为',\n",
+       " '或',\n",
+       " '或许',\n",
+       " '战斗',\n",
+       " '战斗机',\n",
+       " '战术',\n",
+       " '战机',\n",
+       " '战舰',\n",
+       " '截至',\n",
+       " '户',\n",
+       " '所',\n",
+       " '扇门',\n",
+       " '批',\n",
+       " '批次',\n",
+       " '报道',\n",
+       " '拦截',\n",
+       " '提供',\n",
+       " '撞',\n",
+       " '支',\n",
+       " '支线',\n",
+       " '改装',\n",
+       " '改进',\n",
+       " '攻击',\n",
+       " '救援',\n",
+       " '教练机',\n",
+       " '新',\n",
+       " '方面',\n",
+       " '无',\n",
+       " '无人',\n",
+       " '无人机',\n",
+       " '无法',\n",
+       " '日',\n",
+       " '日刊',\n",
+       " '日本',\n",
+       " '早已',\n",
+       " '时',\n",
+       " '星',\n",
+       " '是',\n",
+       " '昼夜',\n",
+       " '暗藏',\n",
+       " '更加',\n",
+       " '替代',\n",
+       " '替换',\n",
+       " '最初',\n",
+       " '月',\n",
+       " '月份',\n",
+       " '月初',\n",
+       " '月底',\n",
+       " '有',\n",
+       " '期',\n",
+       " '机体',\n",
+       " '杀手',\n",
+       " '村',\n",
+       " '条',\n",
+       " '条款',\n",
+       " '来',\n",
+       " '构型',\n",
+       " '枚',\n",
+       " '架',\n",
+       " '架卡',\n",
+       " '架次',\n",
+       " '架空',\n",
+       " '架飞机',\n",
+       " '栋',\n",
+       " '树立',\n",
+       " '根',\n",
+       " '次',\n",
+       " '次测试',\n",
+       " '次访问',\n",
+       " '欧元',\n",
+       " '款',\n",
+       " '正在',\n",
+       " '死',\n",
+       " '比',\n",
+       " '比例',\n",
+       " '比例尺',\n",
+       " '比特',\n",
+       " '毫',\n",
+       " '毫升',\n",
+       " '毫米',\n",
+       " '水上飞机',\n",
+       " '没有',\n",
+       " '河北',\n",
+       " '洲际',\n",
+       " '海里',\n",
+       " '涂',\n",
+       " '港元',\n",
+       " '演习',\n",
+       " '火箭',\n",
+       " '点',\n",
+       " '版',\n",
+       " '版本',\n",
+       " '特技表演',\n",
+       " '特混',\n",
+       " '特种',\n",
+       " '环',\n",
+       " '现在',\n",
+       " '班机',\n",
+       " '瓦',\n",
+       " '由',\n",
+       " '电子战',\n",
+       " '男',\n",
+       " '的',\n",
+       " '直升机',\n",
+       " '相同',\n",
+       " '省份',\n",
+       " '着重',\n",
+       " '码',\n",
+       " '研制',\n",
+       " '研制成功',\n",
+       " '磅',\n",
+       " '磅重',\n",
+       " '票',\n",
+       " '种',\n",
+       " '秒',\n",
+       " '秒钟',\n",
+       " '空中',\n",
+       " '空战',\n",
+       " '空袭',\n",
+       " '空运',\n",
+       " '空降',\n",
+       " '空降师',\n",
+       " '立方米',\n",
+       " '站',\n",
+       " '章',\n",
+       " '笔',\n",
+       " '等',\n",
+       " '管',\n",
+       " '管区',\n",
+       " '篇',\n",
+       " '篇文章',\n",
+       " '米',\n",
+       " '米处',\n",
+       " '米左右',\n",
+       " '类',\n",
+       " '系列',\n",
+       " '级',\n",
+       " '纬线',\n",
+       " '纳米',\n",
+       " '组合',\n",
+       " '组成',\n",
+       " '经济',\n",
+       " '缸',\n",
+       " '网络战',\n",
+       " '美元',\n",
+       " '美军',\n",
+       " '美金',\n",
+       " '而',\n",
+       " '联合',\n",
+       " '能够',\n",
+       " '至',\n",
+       " '至少',\n",
+       " '航次',\n",
+       " '航母',\n",
+       " '航班',\n",
+       " '航空队',\n",
+       " '舰',\n",
+       " '舰船',\n",
+       " '舰艇',\n",
+       " '舰载',\n",
+       " '舰载机',\n",
+       " '舰队',\n",
+       " '艘',\n",
+       " '艘次',\n",
+       " '节',\n",
+       " '节车厢',\n",
+       " '若',\n",
+       " '英亩',\n",
+       " '英尺',\n",
+       " '英磅',\n",
+       " '英里',\n",
+       " '范围',\n",
+       " '营',\n",
+       " '被',\n",
+       " '被称作',\n",
+       " '装甲',\n",
+       " '装甲车',\n",
+       " '覆盖',\n",
+       " '角',\n",
+       " '警力',\n",
+       " '认证',\n",
+       " '训练',\n",
+       " '试飞',\n",
+       " '详细',\n",
+       " '负责',\n",
+       " '财年',\n",
+       " '资料',\n",
+       " '资金',\n",
+       " '赫',\n",
+       " '起',\n",
+       " '趟',\n",
+       " '跟',\n",
+       " '路',\n",
+       " '车载',\n",
+       " '轮',\n",
+       " '轰炸机',\n",
+       " '轴',\n",
+       " '辆',\n",
+       " '达成',\n",
+       " '运输机',\n",
+       " '近日',\n",
+       " '返回',\n",
+       " '还',\n",
+       " '这',\n",
+       " '进行',\n",
+       " '远征军',\n",
+       " '退出',\n",
+       " '通',\n",
+       " '通信',\n",
+       " '遭',\n",
+       " '遭遇',\n",
+       " '部',\n",
+       " '部队',\n",
+       " '都',\n",
+       " '配合',\n",
+       " '采用',\n",
+       " '里',\n",
+       " '量产',\n",
+       " '针',\n",
+       " '镑',\n",
+       " '门',\n",
+       " '闪电',\n",
+       " '间',\n",
+       " '防空',\n",
+       " '阶段',\n",
+       " '隐形',\n",
+       " '隐身',\n",
+       " '集团军',\n",
+       " '需要',\n",
+       " '非常',\n",
+       " '页',\n",
+       " '项',\n",
+       " '预警机',\n",
+       " '颗',\n",
+       " '颗卫星',\n",
+       " '飞',\n",
+       " '飞机',\n",
+       " '飞行',\n",
+       " '首',\n",
+       " '首架',\n",
+       " '首次',\n",
+       " '首飞',\n",
+       " '马力',\n",
+       " '马币',\n",
+       " '马赫',\n",
+       " '马里',\n",
+       " '驶过',\n",
+       " '驻',\n",
+       " '高低',\n",
+       " '高级',\n",
+       " '齐射',\n",
+       " '％',\n",
+       " '（',\n",
+       " '）',\n",
+       " '，',\n",
+       " '：',\n",
+       " '？'}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(next_word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
